--- a/temple-site/attributions.html
+++ b/temple-site/attributions.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <title>Temple Inn & Suites - Home</title>
+  <title>Temple Inn & Suites - Attributions</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content= "Homepage for the hotel chain Temple Inn & Suites." />
+  <meta name="description" content= "Attributions page for the hotel chain Temple Inn & Suites." />
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/base.css">
