--- a/temple-site/index.html
+++ b/temple-site/index.html
@@ -123,7 +123,7 @@
 
     <h2 class="low">Contact Us!</h2>
     <section class="contact thin">
-      <div>
+      <div class="foot">
         <div class="logo">
           <img class="logo-box" src="images/icons/temple_logo.webp" alt="Image logo" />
           <div>
