--- a/temple-site/services.html
+++ b/temple-site/services.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content= "Homepage for the hotel chain Temple Inn & Suites." />
+  <meta name="description" content= "Services page for the hotel chain Temple Inn & Suites." />
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/base.css">
@@ -40,7 +40,7 @@
 
     <h2 class="low">Contact Us!</h2>
     <section class="contact thin">
-      <div>
+      <div class="foot">
         <div class="logo">
           <img class="logo-box" src="images/icons/temple_logo.webp" alt="Image logo" />
           <div>
