--- a/temple-site/attributions.html
+++ b/temple-site/attributions.html
@@ -38,6 +38,10 @@
         <li>LA temple visitor's center: © churchofjesuschrist.org</li>
         <li>Shuttle Bus: © lasvegasbussales.com</li>
       </ul>
+      <h3>Reservations page</h3>
+      <ul>
+        <li>Hotel front: © www.localdatabase.com</li>
+      </ul>
       <h3>Temples page</h3>
       <ul>
         <li>Seattle Temple: © Rick Satterfield</li>
@@ -47,10 +51,28 @@
         <li>Temple information: churchofjesuschrist.org/temples/list</li>
       </ul>
       <h3>Services page</h3>
+      <ul>
+        <li>Daycare: © momresource.ca</li>
+        <li>Senior missionaries: © churchofjesuschrist.org</li>
+        <li>Search center: © familysearch.org</li>
+        <li>Wedding hall: © royalpalace.la</li>
+        <li>Hotel breakfast: © Getty / E+ / zoranm (Hotel breakfast buffet)</li>
+        <li>Hotel gym: © pinterest.com/shswpalmbeach</li>
+        <li>Family history consultant: © naswfamilyhistory.blogspot.com</li>
+      </ul>
       <h3>Missionary page</h3>
+      <ul>
+        <li>Hotel room: © checklistpoint.com</li>
+        <li>Study room: © www.homelane.com</li>
+        <li>computer room: © findhotels.nyc</li>
+      </ul>
       <h3>Reception page</h3>
+      <ul>
+        <li>reception room: © www.theknot.com</li>
+        <li>reception room 2: © boulevardroom.com</li>
+        <li>reception outdoors: © mercuryhall.com</li>
+      </ul>
     </section>
-
 
   </main>
 
