--- a/temple-site/reservation.html
+++ b/temple-site/reservation.html
@@ -31,12 +31,12 @@
   </header>
 
   <main>
-    <div class="res-back">
+    <div class="res-hero">
       <h1>Make a reservation today!</h1>
+    </div>
+    <div class="res-back">
       <section class="res-form">
         <form method="get" action="thankyou.html">
-
-          <hr>
           
           <h3>First, select a temple.</h3>
           <div class="radio">
@@ -160,9 +160,6 @@
         <div class="gmap_canvas">
           <iframe width="400" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=4800%20Montgomery%20Ln&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
           </iframe>
-          <a href="https://www.whatismyip-address.com"></a>
-          <br>
-          <a href="https://www.embedgooglemap.net">how to add a google map to html</a>
         </div>
       </div>
     </section>
