--- a/temple-site/services.html
+++ b/temple-site/services.html
@@ -36,7 +36,72 @@
     </form>
   </header>
 
-  <main>
+  <main id="service">
+    <h1>Get to know our services</h1>
+    <section class="services grid-2">
+      <ul>
+        <li>Free access to changing rooms and bathrooms</li>
+        <li>Kid's playroom plus low-cost, short-term babysitting services</li>
+      </ul>
+      <img src="images/services/daycare.jpg" alt="children's daycare">
+    </section>
+    <hr>
+    <section class="services grid-2">
+      <img src="images/services/missionaries.jpg" alt="senior missionaries">
+      <ul>
+        <li>Long-term stay accommodations in kitchenette suites for full-time temple missionaries</li>
+        <li><a class="link" href="missionary.html">Missionary accomodations</a></li>
+      </ul>
+    </section>
+    <hr>
+    <section class="services grid-2">
+      <ul>
+        <li>Temple history themed sitting area</li>
+        <li>Family search center that supports family search and ordinance work</li>
+      </ul>
+      <img src="images/services/family-search.jpg" alt="family search center">
+    </section>
+    <hr>
+    <section class="services grid-2">
+      <img src="images/services/wedding-hall.jpg" alt="wedding reception hall">
+      <ul>
+        <li>A wedding reception hall with extensive catering options</li>
+        <li><a class="link" href="receptions.html">Book a reception</a></li>
+      </ul>
+    </section>
+
+    <h1>And our free amenities</h1>
+    <section class="amenities grid-2">
+      <ul>
+        <li>Complimentary Breakfast</li>
+        <li>WiFi high-speed internet access and smart TVs</li>
+      </ul>
+      <img src="images/services/hotel-breakfast.jpg" alt="hotel breakfast">
+    </section>
+    <hr>
+    <section class="amenities grid-2">
+      <img src="images/services/hotel-gym.jpg" alt="hotel gym">
+      <ul>
+        <li>Complete gym/workout room</li>
+        <li>Indoor pool and sauna</li>
+      </ul>
+    </section>
+    <hr>
+    <section class="amenities grid-2">
+      <ul>
+        <li>Reserved parking spaces</li>
+        <li>Free regular shuttle to the temple</li>
+      </ul>
+      <img src="images/index/shuttle.jpg" alt="temple shuttle">
+    </section>
+    <hr>
+    <section class="amenities grid-2">
+      <img src="images/services/consultant.jpg" alt="family history consultant">
+      <ul>
+        <li>Family history consultation</li>
+        <li>Family ordinance card service</li>
+      </ul>
+    </section>
 
     <h2 class="low">Contact Us!</h2>
     <section class="contact thin">
@@ -60,13 +125,9 @@
         <div class="gmap_canvas">
           <iframe width="400" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=4800%20Montgomery%20Ln&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
           </iframe>
-          <a href="https://www.whatismyip-address.com"></a>
-          <br>
-          <a href="https://www.embedgooglemap.net">how to add a google map to html</a>
         </div>
       </div>
     </section>
-
   </main>
 
   <footer>
@@ -76,7 +137,6 @@
     <a href="attributions.html">Attributions</a>
   </footer>
 
-  <script src="js/weather.js"></script>
   <script src="js/visits.js"></script>
 </body>
 
