--- a/temple-site/temples.html
+++ b/temple-site/temples.html
@@ -60,7 +60,7 @@
       </div>
       <div class="mapouter">
         <div class="gmap_canvas">
-          <iframe width="400" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=4800%20Montgomery%20Ln&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+          <iframe width="400" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=4800%20Montgomery%20Ln&t=&z=13&ie=UTF8&iwloc=&output=embed">
           </iframe>
         </div>
       </div>
