--- a/temple-site/missionary.html
+++ b/temple-site/missionary.html
@@ -71,7 +71,7 @@
           </label>
           <label>
             <span>Additional information</span>
-            <textarea type="text" name="accomodations"></textarea>
+            <textarea name="accomodations"></textarea>
           </label>
         </div>
         <section class="end-form thin">
