--- a/temple-site/receptions.html
+++ b/temple-site/receptions.html
@@ -80,7 +80,7 @@
       </div>
       <div class="mapouter">
         <div class="gmap_canvas">
-          <iframe width="400" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=4800%20Montgomery%20Ln&t=&z=13&ie=UTF8&iwloc=&output=embed"ß>
+          <iframe width="400" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=4800%20Montgomery%20Ln&t=&z=13&ie=UTF8&iwloc=&output=embed">
           </iframe>
         </div>
       </div>
